--- a/筆記/资治通鉴22.html
+++ b/筆記/资治通鉴22.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>index</title>
+      <title>资治通鉴22</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,251 +261,269 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E8%B3%87%E6%B2%BB%E9%80%9A%E9%91%91">資治通鑑</h1>
+      <blockquote>
+<p>2021/4/14-&gt;2021/4/21</p>
+</blockquote>
+<h1 class="mume-header" id="314-%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%8C-%E6%B1%89%E7%BA%AA%E5%8D%81%E5%9B%9B">314 卷二十二 汉纪十四</h1>
 
 <blockquote>
-<p>筆記、整理、數據化</p>
+<p>-98-&gt;-87</p>
 </blockquote>
+<h2 class="mume-header" id="31401-%E6%97%8F%E6%9D%8E%E9%99%B5%E5%AE%B6%E5%8F%8A%E5%91%BD%E5%B0%A7%E6%AF%8D%E9%97%A8">31401 族李陵家及命尧母门</h2>
+
 <blockquote>
-<p>制作：<a href="https://gamefang.github.io/">gamefang</a></p>
+<p>春，二月，王卿有罪自杀-&gt;卒成巫蛊之祸，悲夫</p>
 </blockquote>
-<h2 class="mume-header" id="1-%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A">1 主要數據</h2>
-
 <ul>
-<li>1.1 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E9%80%9A%E9%91%92%E7%9B%AE%E9%8C%84.html">通鑒目錄</a></li>
-<li>1.2 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8.html">人物總表</a>
-<ul>
-<li>1.2.1 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E5%AD%97%E6%AE%B5%E8%AA%AA%E6%98%8E.html">字段說明</a></li>
+<li>七科讁（黑五類）：吏有罪、亡命、贅婿、賈人、故有市籍、父母有市籍、大父母有市籍</li>
+<li>西漢時期匈奴官制</li>
 </ul>
-</li>
-<li>1.3 政權年代表
-<ul>
-<li>1.3.1 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%88%B0%E5%9C%8B%E7%A7%A6.html">戰國秦</a></li>
-<li>1.3.2 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%BC%A2.html">漢</a></li>
-</ul>
-</li>
-</ul>
-<h2 class="mume-header" id="2-%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85">2 年代專項</h2>
-
-<h3 class="mume-header" id="21-%E6%9D%B1%E5%91%A8">2.1 東周</h3>
-
-<h4 class="mume-header" id="211-%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF">2.1.1 晉國六卿</h4>
-
-<ul>
-<li>2.1.1.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF/%E6%99%89%E5%9C%8B%E5%85%AD%E5%8D%BF.html">晉國六卿</a></li>
-</ul>
-<h4 class="mume-header" id="212-%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96">2.1.2 六國世系圖</h4>
-
-<ul>
-<li>2.1.2.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E6%A5%9A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">楚國世系圖</a></li>
-<li>2.1.2.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">韓國世系圖</a></li>
-<li>2.1.2.3 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E8%B6%99%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">趙國世系圖</a></li>
-<li>2.1.2.4 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E9%AD%8F%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">魏國世系圖</a></li>
-<li>2.1.2.5 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E7%87%95%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">燕國世系圖</a></li>
-<li>2.1.2.6 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%9D%B1%E5%91%A8/%E5%85%AD%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96/%E9%BD%8A%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">齊國世系圖</a></li>
-</ul>
-<h3 class="mume-header" id="22-%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2">2.2 秦末楚漢</h3>
-
-<ul>
-<li>2.2.1 <a href="https://www.ageeye.cn/map/66656/">陳勝吳廣起義始末</a></li>
-<li>2.2.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2%E6%94%BF%E6%AC%8A.html">秦末楚漢政權</a></li>
-<li>2.2.3 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E7%A7%A6%E6%9C%AB%E6%A5%9A%E6%BC%A2/%E7%A7%A6%E6%9C%AB%E9%BD%8A%E5%9C%8B%E6%94%BF%E6%AC%8A%E5%9C%96.png">秦末齊國政權圖</a></li>
-</ul>
-<h3 class="mume-header" id="23-%E8%A5%BF%E6%BC%A2">2.3 西漢</h3>
-
-<ul>
-<li>2.3.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E7%A5%9E%E5%A5%87%E7%9A%84%E9%AD%AF%E5%85%83%E5%85%AC%E4%B8%BB.png">神奇的魯元公主</a></li>
-<li>2.3.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E8%A5%BF%E6%BC%A2%E9%96%8B%E5%9C%8B%E5%8A%9F%E8%87%A3%E5%88%97%E8%A1%A8.html">西漢開國功臣列表</a></li>
-<li>2.3.3 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E5%8A%89%E9%82%A6%E4%B8%96%E7%B3%BB%E5%9C%96.html">劉邦世系圖</a></li>
-<li>2.3.4 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E5%BC%B5%E9%A8%AB%E9%80%9A%E8%A5%BF%E5%9F%9F%E8%AB%B8%E5%9C%8B%E6%A6%82%E6%B3%81.html">張騫通西域諸國概況</a></li>
-</ul>
-<h2 class="mume-header" id="3-%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85">3 通用專項</h2>
-
-<h3 class="mume-header" id="31-%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96">3.1 歷代世系圖</h3>
-
-<ul>
-<li>3.1.1 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96/%E5%91%A8%E6%9C%9D%E4%B8%96%E7%B3%BB%E5%9C%96.html">周朝世系圖</a></li>
-<li>3.1.2 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96/%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96.html">秦國世系圖</a></li>
-</ul>
-<h3 class="mume-header" id="39-%E9%9B%9C%E9%A0%85">3.9 雜項</h3>
-
-<ul>
-<li>3.9.1 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%B9%B2%E6%94%AF%E8%A1%A8.html">干支表</a></li>
-<li>3.9.2 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E6%94%9D%E6%8F%90%E5%B0%8D%E7%85%A7%E8%A1%A8.html">攝提對照表</a></li>
-<li>3.9.3 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">和親列表</a></li>
-<li>3.9.4 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">被詛咒的趙王</a></li>
-<li>3.9.5 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">奇葩序列</a></li>
-<li>3.9.6 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">百越各國</a></li>
-</ul>
-<h2 class="mume-header" id="4-%E7%AD%86%E8%A8%98">4 筆記</h2>
-
 <table>
 <thead>
 <tr>
-<th>卷目</th>
-<th>卷名</th>
-<th>起始年</th>
-<th>結束年</th>
-<th>備注</th>
+<th>名稱</th>
+<th>說明</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B41.html">卷1</a></td>
-<td>周紀一</td>
-<td>-403</td>
-<td>-369</td>
-<td>周威烈王23年至24年、周安王共26年、周烈王至7年</td>
+<td>單于</td>
+<td>最高統治者，下轄四王</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B42.html">卷2</a></td>
-<td>周紀二</td>
-<td>-368</td>
-<td>-321</td>
-<td>周顯王共48年</td>
+<td>左賢王</td>
+<td>王級別第1，四角，太子位，下轄六長</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B43.html">卷3</a></td>
-<td>周紀三</td>
-<td>-320</td>
-<td>-298</td>
-<td>周慎靚王共6年、周赧王至17年</td>
+<td>左谷蠡王</td>
+<td>王級別第2，四角，下轄六長</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B44.html">卷4</a></td>
-<td>周紀四</td>
-<td>-297</td>
-<td>-273</td>
-<td>周赧王18年至42年</td>
+<td>右賢王</td>
+<td>王級別第3，四角，下轄六長</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B45.html">卷5</a></td>
-<td>周紀五</td>
-<td>-272</td>
-<td>-256</td>
-<td>周赧王43年至59年</td>
+<td>右谷蠡王</td>
+<td>王級別第4，四角，下轄六長</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B46.html">卷6</a></td>
-<td>秦紀一</td>
-<td>-255</td>
-<td>-228</td>
-<td>秦昭襄王52年至56年、秦孝文王共1年、秦莊襄王共3年、秦王政至19年</td>
+<td>左大將</td>
+<td>二十四長第1，統領萬餘人至數千不等</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B47.html">卷7</a></td>
-<td>秦紀二</td>
-<td>-227</td>
-<td>-209</td>
-<td>秦始皇20年至37年、秦二世元年</td>
+<td>右大將</td>
+<td>二十四長第2</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B48.html">卷8</a></td>
-<td>秦紀三</td>
-<td>-208</td>
-<td>-207</td>
-<td>秦二世2年至3年</td>
+<td>左大都尉</td>
+<td>二十四長第3</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B49.html">卷9</a></td>
-<td>漢紀一</td>
-<td>-206</td>
-<td>-205</td>
-<td>楚漢至2年</td>
+<td>右大都尉</td>
+<td>二十四長第4</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B410.html">卷10</a></td>
-<td>漢紀二</td>
-<td>-204</td>
-<td>-203</td>
-<td>楚漢3年至4年</td>
+<td>左大當戶</td>
+<td>二十四長第5</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B411.html">卷11</a></td>
-<td>漢紀三</td>
-<td>-202</td>
-<td>-200</td>
-<td>漢高祖5年至7年</td>
+<td>右大當戶</td>
+<td>二十四長第6</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B412.html">卷12</a></td>
-<td>漢紀四</td>
-<td>-199</td>
-<td>-188</td>
-<td>漢高祖8年至12年、漢惠帝共7年</td>
+<td>千長</td>
+<td>統領千人</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B413.html">卷13</a></td>
-<td>漢紀五</td>
-<td>-187</td>
-<td>-178</td>
-<td>漢高后共8年、漢文帝至2年</td>
+<td>百長</td>
+<td>統領百人</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B414.html">卷14</a></td>
-<td>漢紀六</td>
-<td>-177</td>
-<td>-170</td>
-<td>漢文帝3年至10年</td>
+<td>什長</td>
+<td>統領十人</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B415.html">卷15</a></td>
-<td>漢紀七</td>
-<td>-169</td>
-<td>-155</td>
-<td>漢文帝11年至23年、漢景帝至2年</td>
+<td>左骨都侯</td>
+<td>異姓輔政大臣</td>
 </tr>
 <tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B416.html">卷16</a></td>
-<td>漢紀八</td>
-<td>-154</td>
-<td>-141</td>
-<td>漢景帝3年至16年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B417.html">卷17</a></td>
-<td>漢紀九</td>
-<td>-140</td>
-<td>-134</td>
-<td>漢武帝至7年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B418.html">卷18</a></td>
-<td>漢紀十</td>
-<td>-133</td>
-<td>-125</td>
-<td>漢武帝8年至16年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B419.html">卷19</a></td>
-<td>漢紀十一</td>
-<td>-124</td>
-<td>-119</td>
-<td>漢武帝17年至22年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B420.html">卷20</a></td>
-<td>漢紀十二</td>
-<td>-118</td>
-<td>-110</td>
-<td>漢武帝17年至23年至31年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B421.html">卷21</a></td>
-<td>漢紀十三</td>
-<td>-109</td>
-<td>-99</td>
-<td>漢武帝32年至42年</td>
-</tr>
-<tr>
-<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B422.html">卷22</a></td>
-<td>漢紀十四</td>
-<td>-98</td>
-<td>-87</td>
-<td>漢武帝43年至54年</td>
+<td>右骨都侯</td>
+<td>異姓輔政大臣</td>
 </tr>
 </tbody>
 </table>
+<ul>
+<li>狐鹿姑單于兄弟讓賢，有宋宣公宋穆公套娃讓賢之風。宋宣公成五世之亂，匈奴有五單于爭立。</li>
+<li>汉武帝子嗣</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>姓名</th>
+<th>常用名</th>
+<th>母</th>
+<th>详情</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>刘据</td>
+<td>戾太子</td>
+<td>卫子夫</td>
+<td>太子，死于巫蛊之祸，孙为汉宣帝</td>
+</tr>
+<tr>
+<td>刘闳</td>
+<td>齐怀王</td>
+<td>王夫人</td>
+<td>次子，早夭</td>
+</tr>
+<tr>
+<td>刘旦</td>
+<td>燕剌王</td>
+<td>李姬</td>
+<td>三子，汉武帝病重要求宿卫被削，後謀反</td>
+</tr>
+<tr>
+<td>刘胥</td>
+<td>广陵王</td>
+<td>李姬</td>
+<td>四子，力能扛鼎无法度</td>
+</tr>
+<tr>
+<td>刘髆</td>
+<td>昌邑王</td>
+<td>孝武李夫人</td>
+<td>五子，子为汉废帝刘贺</td>
+</tr>
+<tr>
+<td>刘弗陵</td>
+<td>汉昭帝</td>
+<td>钩弋夫人</td>
+<td>幼子，汉昭帝，杀母立子</td>
+</tr>
+<tr>
+<td>卫长公主</td>
+<td></td>
+<td>卫子夫</td>
+<td>长女，嫁曹襄、栾大</td>
+</tr>
+<tr>
+<td>诸邑公主</td>
+<td></td>
+<td>卫子夫?</td>
+<td>死于巫蛊之祸</td>
+</tr>
+<tr>
+<td>阳石公主</td>
+<td></td>
+<td>卫子夫?</td>
+<td>与公孙敬声通奸，死于巫蛊之祸</td>
+</tr>
+<tr>
+<td>鄂邑长公主</td>
+<td></td>
+<td></td>
+<td>抚养汉昭帝，谋诛霍光败後自杀</td>
+</tr>
+<tr>
+<td>夷安公主</td>
+<td></td>
+<td></td>
+<td>嫁隆虑公主子昭平君</td>
+</tr>
+<tr>
+<td>石邑公主?</td>
+<td></td>
+<td>卫子夫?</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h2 class="mume-header" id="31402-%E9%87%8D%E6%B1%9F%E5%85%85%E5%8F%8A%E5%B7%AB%E8%9B%8A%E4%B9%8B%E7%A5%B8%E8%B5%B7">31402 重江充及巫蛊之祸起</h2>
+
+<blockquote>
+<p>赵人江充为水衡都尉-&gt;上行幸甘泉</p>
+</blockquote>
+<ul>
+<li>江充不过是张汤等酷吏的翻版，巫蛊之祸背锅人</li>
+<li>黑社会老大朱安世狱中上书，反将丞相告倒灭族</li>
+</ul>
+<h2 class="mume-header" id="31403-%E6%88%BE%E5%A4%AA%E5%AD%90">31403 戾太子</h2>
+
+<blockquote>
+<p>初，上年二十九乃生戾太子-&gt;宜太子之不终也</p>
+</blockquote>
+<ul>
+<li>醇谨的万石君家族，传至石德，成为首倡戾太子造反的人物，这就是司马光所言傅太子的方正纯良之士</li>
+<li>人性善恶随时浮动，如汉武帝死于巫蛊之祸，则为典型暴君，因多活数年，还有反悔的机会</li>
+</ul>
+<h2 class="mume-header" id="31404-%E6%9D%8E%E5%B9%BF%E5%88%A9%E9%99%8D%E5%8C%88%E5%A5%B4">31404 李广利降匈奴</h2>
+
+<blockquote>
+<p>癸亥，地震-&gt;宗族遂滅</p>
+</blockquote>
+<h2 class="mume-header" id="31405-%E8%BD%AE%E5%8F%B0%E8%AF%8F%E5%8F%8A%E5%AF%8C%E6%B0%91%E4%BE%AF">31405 轮台诏及富民侯</h2>
+
+<blockquote>
+<p>秋，蝗-&gt;其无三代之臣乎</p>
+</blockquote>
+<ul>
+<li>征和四年，漢武帝不聽群臣勸阻，臨東萊大海以求神山。他已經不信神仙之事了，無端而起的重病像巫蠱之禍一般過去，表面上征四夷服萬民的自己，不過是一個晚年喪子的老人。萬國來朝的假象建立在民相食的基礎上，漢朝正在重蹈秦朝的覆轍，一生濫殺的武帝忽然閃現出文帝的光輝。大風晦冥，海水沸湧，不可一世的帝王浪子回頭，觀滄海而圓寂。</li>
+<li>田千秋能一步登天，既有借高祖諷喻之智，又逢武帝罪己之機</li>
+<li>人臣功五品</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>功</th>
+<th>定義</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>勳</td>
+<td>以德立宗廟、定社稷</td>
+</tr>
+<tr>
+<td>勞</td>
+<td>以言</td>
+</tr>
+<tr>
+<td>功</td>
+<td>角力</td>
+</tr>
+<tr>
+<td>閥</td>
+<td>明其等（積功）</td>
+</tr>
+<tr>
+<td>閲</td>
+<td>積日（經歷）</td>
+</tr>
+</tbody>
+</table>
+<h2 class="mume-header" id="31406-%E9%87%91%E6%97%A5%E7%A3%BE%E6%95%91%E9%A9%BE%E5%8F%8A%E6%9D%80%E8%B6%99%E5%A9%95%E5%A6%A4">31406 金日磾救驾及杀趙婕妤</h2>
+
+<blockquote>
+<p>秋，八月，辛酉晦，日有食之-&gt;二月，行幸盩厔，五柞宫</p>
+</blockquote>
+<ul>
+<li>明德皇后將先祖馬何羅改姓莽，順便污衊王莽</li>
+</ul>
+<h2 class="mume-header" id="31407-%E6%B1%89%E6%AD%A6%E5%B8%9D%E6%89%98%E5%AD%A4">31407 汉武帝托孤</h2>
+
+<blockquote>
+<p>上病笃，霍光涕泣问曰-&gt;此其所以有亡秦之失而免亡秦之祸乎</p>
+</blockquote>
+<ul>
+<li>弼馬溫上官桀為升官，故意在武帝病時把馬養瘦，被責問時靠哭上位</li>
+</ul>
+<h2 class="mume-header" id="31408-%E6%B1%89%E6%98%AD%E5%B8%9D%E5%8D%B3%E4%BD%8D">31408 汉昭帝即位</h2>
+
+<blockquote>
+<p>戊辰，太子即皇帝位-&gt;左将军桀行北边</p>
+</blockquote>
 
       </div>
       
