--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -267,7 +267,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>拒絕升官發財：季札、子閭、王蠋</li>
 <li>後宮達人：田成子、中山靖王劉勝、田蚡、司馬炎</li>
 <li>烹子食子：易牙、樂羊</li>
-<li>人力大牛：翟璜</li>
+<li>人力大牛：翟璜、暴勝之</li>
 <li>愛兵如子：吳起、李廣、衛青</li>
 <li>虐待士卒：霍去病、李廣利、張飛</li>
 <li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
@@ -283,7 +283,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>相面大師：呂公、劉邦、許負、唐舉</li>
 <li>感動中國好官：魏咎、卜式、兒寬</li>
 <li>嘴賤：韓生、栗姬</li>
-<li>站錯隊的智者：李左車、龍且客、伍被</li>
+<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平</li>
 <li>長壽：趙佗、張蒼、伏生</li>
 <li>苦逼一生：酈寄、申屠嘉</li>
 <li>二婚皇后：薄姬、孝景王皇后</li>
@@ -312,6 +312,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。</li>
 <li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
 <li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
+<li>蒯聵：趕走親兒子，即位為王</li>
 </ul>
 
       </div>
