--- a/index.html
+++ b/index.html
@@ -505,6 +505,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>-87</td>
 <td>漢武帝43年至54年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B423.html">卷23</a></td>
+<td>漢紀十五</td>
+<td>-86</td>
+<td>-75</td>
+<td>漢昭帝至12年</td>
+</tr>
 </tbody>
 </table>
 
