人物更新至卷24節8

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -275,7 +275,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母</li>
 <li>龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝</li>
-<li>絕望的父母：趙將括母、晁錯父、陳勝妻父</li>
+<li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年</li>
 <li>給君主獻孕婦：呂不韋、春申君</li>
 <li>口吃：韓非、周昌、司馬相如、鄧艾</li>
 <li>狐臭：楚懷王</li>
@@ -283,7 +283,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>相面大師：呂公、劉邦、許負、唐舉</li>
 <li>感動中國好官：魏咎、卜式、兒寬</li>
 <li>嘴賤：韓生、栗姬</li>
-<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平</li>
+<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐</li>
 <li>長壽：趙佗、張蒼、伏生</li>
 <li>苦逼一生：酈寄、申屠嘉</li>
 <li>二婚皇后：薄姬、孝景王皇后</li>
@@ -302,6 +302,10 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>漢奸：中行説、趙信、衛律</li>
 <li>媽寶：梁王劉武、昭平君</li>
 <li>射天罵天：武乙、紂、宋康王、上官安</li>
+<li>裸奔愛好者：桑扈、上官安、劉伶</li>
+<li>飆車愛好者：劉賀</li>
+<li>變態殺人狂：劉建、劉去</li>
+<li>盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
@@ -310,7 +314,6 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>祖己：堅持苦孝被繼母流放致死</li>
 <li>晉景公：掉糞坑而死</li>
 <li>燕王劉定國：庶母弟妻女兒三代亂倫王</li>
-<li>江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。</li>
 <li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
 <li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
 <li>蒯聵：趕走親兒子，即位為王</li>
