--- a/index.html
+++ b/index.html
@@ -520,6 +520,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>-68</td>
 <td>漢昭帝13年、漢廢帝、漢宣帝至6年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B425.html">卷25</a></td>
+<td>漢紀十七</td>
+<td>-67</td>
+<td>-62</td>
+<td>漢宣帝7年至12年</td>
+</tr>
 </tbody>
 </table>
 
