--- a/筆記/资治通鉴25.html
+++ b/筆記/资治通鉴25.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>奇葩序列</title>
+      <title>资治通鉴25</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,64 +261,130 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97">奇葩序列</h1>
+      <blockquote>
+<p>2021/5/9-&gt;2021/5/14</p>
+</blockquote>
+<h1 class="mume-header" id="317-%E5%8D%B7%E4%BA%8C%E5%8D%81%E4%BA%94-%E6%B1%89%E7%BA%AA%E5%8D%81%E4%B8%83">317 卷二十五 汉纪十七</h1>
 
+<blockquote>
+<p>-67-&gt;-62</p>
+</blockquote>
+<h2 class="mume-header" id="31701-%E7%AB%8B%E5%A4%AA%E5%AD%90%E5%8A%89%E5%A5%AD">31701 立太子劉奭</h2>
+
+<blockquote>
+<p>春，三月，诏曰-&gt;广由是见器重</p>
+</blockquote>
+<h2 class="mume-header" id="31702-%E4%BE%B5%E5%89%8A%E9%9C%8D%E6%B0%8F">31702 侵削霍氏</h2>
+
+<blockquote>
+<p>京师大雨雹-&gt;悉易以所亲信许、史子弟代之</p>
+</blockquote>
+<h2 class="mume-header" id="31703-%E5%B0%9A%E5%BE%B7%E7%B7%A9%E5%88%91%E6%9B%B8">31703 尚德緩刑書</h2>
+
+<blockquote>
+<p>初，孝武之世，征发烦数-&gt;则廷平将召权而为乱首矣</p>
+</blockquote>
+<h2 class="mume-header" id="31704-%E4%BA%94%E7%88%AD%E8%BB%8A%E5%B8%AB">31704 五爭車師</h2>
+
+<blockquote>
+<p>昭帝时，匈奴使四千骑田车师-&gt;立广川惠王孙文为广川王</p>
+</blockquote>
 <ul>
-<li>拒絕升官發財：季札、子閭、王蠋</li>
-<li>後宮達人：田成子、中山靖王劉勝、田蚡、司馬炎</li>
-<li>烹子食子：易牙、樂羊</li>
-<li>人力大牛：翟璜、暴勝之</li>
-<li>愛兵如子：吳起、李廣、衛青</li>
-<li>虐待士卒：霍去病、李廣利、張飛</li>
-<li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
-<li>餓死：齊桓公、趙武靈王、趙王劉友、周亞夫</li>
-<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
-<li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母</li>
-<li>龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝</li>
-<li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年</li>
-<li>給君主獻孕婦：呂不韋、春申君</li>
-<li>口吃：韓非、周昌、司馬相如、鄧艾</li>
-<li>狐臭：楚懷王</li>
-<li>壁中藏書：孔鮒、伏生</li>
-<li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢</li>
-<li>嘴賤：韓生、栗姬</li>
-<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐</li>
-<li>長壽：趙佗、張蒼、伏生</li>
-<li>苦逼一生：酈寄、申屠嘉</li>
-<li>二婚皇后：薄姬、孝景王皇后</li>
-<li>醜：楚穆王、孟嘗君、田蚡</li>
-<li>野獸搏鬥者：轅固、賈夫人、馮婕妤</li>
-<li>被污盜嫂受金：陳平、直不疑</li>
-<li>坑爹：周亞夫子、公孫敬聲</li>
-<li>名廚：伊尹、易牙</li>
-<li>狗監：楊得意</li>
-<li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子</li>
-<li>牧羊：卜式、路溫舒</li>
-<li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛</li>
-<li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
-<li>易與耳：劇辛、龍且、李廣</li>
-<li>刻苦讀書：朱買臣、兒寬、路溫舒</li>
-<li>常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆</li>
-<li>漢奸：中行説、趙信、衛律</li>
-<li>媽寶：梁王劉武、昭平君</li>
-<li>射天罵天：武乙、紂、宋康王、上官安</li>
-<li>裸奔愛好者：桑扈、上官安、劉伶</li>
-<li>飆車愛好者：劉賀</li>
-<li>變態殺人狂：劉建、劉去</li>
-<li>盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
-<li>裝瘋：箕子、孫臏、蒯徹、韋玄成、朱棣</li>
+<li>五爭車師</li>
 </ul>
-<h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
+<table>
+<thead>
+<tr>
+<th>次數</th>
+<th>時間</th>
+<th>備註</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>-99</td>
+<td>武帝時，成娩繫車師不利，被匈奴趕走</td>
+</tr>
+<tr>
+<td>2</td>
+<td>-88</td>
+<td>武帝時，成娩將六國兵圍車師，車師臣服漢</td>
+</tr>
+<tr>
+<td>3</td>
+<td>-72</td>
+<td>宣帝時，聯烏抗匈趕走匈奴，匈奴立烏貴</td>
+</tr>
+<tr>
+<td>4</td>
+<td>-68</td>
+<td>宣帝時，鄭吉、司馬憙繫車師，烏貴逃亡，兜莫東遷</td>
+</tr>
+<tr>
+<td>5</td>
+<td>-64</td>
+<td>宣帝時，鄭吉、司馬憙繫車師，與匈奴左大將爭</td>
+</tr>
+</tbody>
+</table>
+<h2 class="mume-header" id="31705-%E9%9C%8D%E7%A6%B9%E4%B9%8B%E4%BA%82">31705 霍禹之亂</h2>
 
+<blockquote>
+<p>霍显及禹、山、云自见日侵削-&gt;孝宣亦少恩哉</p>
+</blockquote>
 <ul>
-<li>密康公：三女投奔，執意迎娶，被滅國</li>
-<li>祖己：堅持苦孝被繼母流放致死</li>
-<li>晉景公：掉糞坑而死</li>
-<li>燕王劉定國：庶母弟妻女兒三代亂倫王</li>
-<li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
-<li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
-<li>蒯聵：趕走親兒子，即位為王</li>
+<li>歷史輪迴
+<ul>
+<li>尚德緩刑書：公孫無知之禍為齊桓公出，驪姬之亂為晉文公出，諸呂之亂為漢文帝出-&gt;廢立劉賀為漢宣帝出</li>
+<li>張敞上封事：季成子立魯僖公成三桓專權，趙衰佐晉文公成三家分晉，田完助齊桓公成田氏代齊-&gt;霍氏廢立將取代漢家江山</li>
+</ul>
+</li>
+<li>霍光罪不至全家族滅，漢宣帝釣魚執法，為報許平君之仇，而霍光仍列麒麟閣</li>
+</ul>
+<h2 class="mume-header" id="31706-%E9%BE%94%E9%81%82%E6%B2%BB%E5%8B%83%E6%B5%B7%E5%8F%8A%E9%BE%9C%E8%8C%B2%E4%BE%86%E6%9C%9D">31706 龔遂治勃海及龜茲來朝</h2>
+
+<blockquote>
+<p>九月，诏减天下盐贾-&gt;夫人号称公主，赏赐甚厚</p>
+</blockquote>
+<ul>
+<li>殿最：考評最末為殿，最佳為最</li>
+</ul>
+<h2 class="mume-header" id="31707-%E8%B6%99%E5%BB%A3%E6%BC%A2%E8%85%B0%E6%96%AC%E5%8F%8A%E5%B0%B9%E7%BF%81%E6%AD%B8%E5%8D%87%E9%81%B7">31707 趙廣漢腰斬及尹翁歸升遷</h2>
+
+<blockquote>
+<p>初作杜陵-&gt;故尤得名誉于朝廷</p>
+</blockquote>
+<ul>
+<li>破案大師趙廣漢過於要強，死於與丞相鬥法。智者千慮必有一失</li>
+</ul>
+<h2 class="mume-header" id="31708-%E6%96%AC%E8%8E%8E%E8%BB%8A%E7%8E%8B">31708 斬莎車王</h2>
+
+<blockquote>
+<p>初，乌孙公主少子万年有宠于莎车王-&gt;以奉世为光禄大夫</p>
+</blockquote>
+<h2 class="mume-header" id="31709-%E6%A3%84%E8%BB%8A%E5%B8%AB">31709 棄車師</h2>
+
+<blockquote>
+<p>春，正月，赦天下-&gt;使护鄯善以西南道</p>
+</blockquote>
+<ul>
+<li>漢宣帝賢明兩點足矣，其一不忘微時許平君，其二為百姓避諱改名</li>
+<li>魏相紙上談兵，拿出義應忿貪驕五兵論，使鄭吉不得立功，車師送與匈奴</li>
+</ul>
+<h2 class="mume-header" id="31710-%E8%B3%A2%E8%87%A3%E8%BC%A9%E5%87%BA%E5%8F%8A%E6%B5%B7%E6%98%8F%E4%BE%AF">31710 賢臣輩出及海昏侯</h2>
+
+<blockquote>
+<p>魏相好观汉故事及便宜章奏-&gt;春，三月，詔封故昌邑王賀為海昏侯</p>
+</blockquote>
+<h2 class="mume-header" id="31711-%E6%BC%A2%E5%AE%A3%E5%B8%9D%E5%A0%B1%E6%81%A9%E5%8F%8A%E8%AB%B8%E7%BE%8C%E5%8F%9B%E4%BA%82">31711 漢宣帝報恩及諸羌叛亂</h2>
+
+<blockquote>
+<p>乙未，诏曰：“朕微眇时-&gt;谷石五钱</p>
+</blockquote>
+<ul>
+<li>丙吉活雷鋒，臨封侯大病，差點真雷鋒，大仙夏侯勝說他死不了，挺了过来</li>
+<li>二疏養老觀與當今國外同，自己吃好玩好，不給子孫留</li>
 </ul>
 
       </div>
