--- a/index.html
+++ b/index.html
@@ -534,6 +534,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>-59</td>
 <td>漢宣帝13年至15年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B427.html">卷27</a></td>
+<td>漢紀十九</td>
+<td>-58</td>
+<td>-49</td>
+<td>漢宣帝16年至25年</td>
+</tr>
 </tbody>
 </table>
 
