更新卷27人物

--- a/筆記/资治通鉴27.html
+++ b/筆記/资治通鉴27.html
@@ -407,7 +407,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <p>夏，廣川王海陽坐禽獸行-&gt;皇后曰皇太后</p>
 </blockquote>
 <ul>
-<li>變態殺人狂劉去被誅，漢宣帝不忍，封其子劉文。劉文子劉海陽發明了春宮圖，邀請姐妹來看，又坐禽獸行廢。這一脈變態傳承下來，新的劉海洋又用硫酸開始潑熊。</li>
+<li>變態殺人狂劉去被誅，漢宣帝不忍，封其兄劉文。劉文子劉海陽發明了春宮圖，邀請姐妹來看，又坐禽獸行廢。這一脈變態傳承下來，新的劉海洋又用硫酸開始潑熊。</li>
 </ul>
 
       </div>
