更新人物至卷28節2

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -320,6 +320,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
 <li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
 <li>蒯聵：趕走親兒子，即位為王</li>
+<li>公孫弘：養豬出身</li>
 </ul>
 
       </div>
