--- a/index.html
+++ b/index.html
@@ -550,6 +550,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>-42</td>
 <td>漢元帝至7年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B429.html">卷29</a></td>
+<td>漢紀二十一</td>
+<td>-41</td>
+<td>-33</td>
+<td>漢元帝8年至16年</td>
+</tr>
 </tbody>
 </table>
 
