--- a/index.html
+++ b/index.html
@@ -557,6 +557,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>-33</td>
 <td>漢元帝8年至16年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B430.html">卷30</a></td>
+<td>漢紀二十二</td>
+<td>-32</td>
+<td>-23</td>
+<td>漢成帝至10年</td>
+</tr>
 </tbody>
 </table>
 
