--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -311,6 +311,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
 <li>裝瘋：箕子、孫臏、蒯徹、韋玄成、朱棣</li>
 <li>獨眼龍：杜欽、夏侯惇</li>
+<li>高頻率犯罪：劉賀、劉立</li>
+<li>背鍋俠：夏侯藩</li>
+<li>殺子：石碏、王立、王莽</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
