--- a/index.html
+++ b/index.html
@@ -578,6 +578,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>-8</td>
 <td>漢成帝20年至25年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B433.html">卷33</a></td>
+<td>漢紀二十五</td>
+<td>-7</td>
+<td>-6</td>
+<td>漢成帝26年、漢哀帝元年</td>
+</tr>
 </tbody>
 </table>
 
