--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -273,6 +273,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
 <li>餓死：齊桓公、趙武靈王、趙王劉友、周亞夫</li>
 <li>氣死：申屠嘉、王商</li>
+<li>哭死：張放</li>
+<li>絕食嘔血死：周亞夫、王嘉</li>
+<li>自焚：魏咎、涉間、孝平王皇后</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
 <li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母</li>
@@ -314,7 +317,6 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>高頻率犯罪：劉賀、劉立</li>
 <li>背鍋俠：夏侯藩</li>
 <li>殺子：石碏、金日磾、漢成帝、王立、王莽</li>
-<li>哭死：張放</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
