--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -286,7 +286,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>狐臭：楚懷王</li>
 <li>壁中藏書：孔鮒、伏生</li>
 <li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣</li>
+<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡</li>
 <li>嘴賤：韓生、栗姬</li>
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐</li>
 <li>長壽：趙佗、張蒼、伏生</li>
