--- a/index.html
+++ b/index.html
@@ -672,6 +672,15 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>新三公分職</td>
 <td>漢哀帝5年至6年、漢平帝至2年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B436.html">卷36</a></td>
+<td>漢紀二十八</td>
+<td>3</td>
+<td>8</td>
+<td></td>
+<td>九錫之法</td>
+<td>漢平帝3年至6年、王莽居攝、始初至3年</td>
+</tr>
 </tbody>
 </table>
 
