--- a/筆記/资治通鉴36.html
+++ b/筆記/资治通鉴36.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>奇葩序列</title>
+      <title>资治通鉴36</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,75 +261,150 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97">奇葩序列</h1>
+      <blockquote>
+<p>2021/7/9-&gt;2021/7/13</p>
+</blockquote>
+<h1 class="mume-header" id="328-%E5%8D%B7%E4%B8%89%E5%8D%81%E5%85%AD-%E6%B1%89%E7%BA%AA%E4%BA%8C%E5%8D%81%E5%85%AB">328 卷三十六 汉纪二十八</h1>
 
+<blockquote>
+<p>3-&gt;8</p>
+</blockquote>
+<h2 class="mume-header" id="32801-%E7%8B%97%E8%A1%80%E9%96%80%E4%BA%8B%E4%BB%B6">32801 狗血門事件</h2>
+
+<blockquote>
+<p>春，太后遣长乐少府夏侯籓-&gt;客于辽东</p>
+</blockquote>
 <ul>
-<li>拒絕升官發財：季札、子閭、王蠋、孔霸</li>
-<li>後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、司馬炎</li>
-<li>烹子食子：易牙、樂羊</li>
-<li>人力大牛：翟璜、暴勝之</li>
-<li>愛兵如子：吳起、李廣、衛青</li>
-<li>虐待士卒：霍去病、李廣利、張飛</li>
-<li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
-<li>餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫</li>
-<li>氣死：申屠嘉、王商</li>
-<li>哭死：張放</li>
-<li>絕食嘔血死：周亞夫、王嘉</li>
-<li>自焚：魏咎、涉間、孝平王皇后</li>
-<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
-<li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母</li>
-<li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母</li>
-<li>坑爹：周亞夫子、公孫敬聲、蕭伋</li>
-<li>給君主獻孕婦：呂不韋、春申君</li>
-<li>龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝</li>
-<li>口吃：韓非、周昌、司馬相如、鄧艾</li>
-<li>狐臭：楚懷王</li>
-<li>壁中藏書：孔鮒、伏生</li>
-<li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡</li>
-<li>嘴賤：韓生、栗姬、楊修</li>
-<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、田豐</li>
-<li>長壽：趙佗、張蒼、伏生</li>
-<li>苦逼一生：酈寄、申屠嘉、孝睦皇后</li>
-<li>二婚皇后：薄姬、孝景王皇后</li>
-<li>醜：楚穆王、孟嘗君、蔡澤、田蚡</li>
-<li>野獸搏鬥者：轅固、賈夫人、馮婕妤</li>
-<li>被污盜嫂受金：陳平、直不疑</li>
-<li>名廚：伊尹、易牙</li>
-<li>狗監：楊得意</li>
-<li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子</li>
-<li>牧羊：卜式、路溫舒</li>
-<li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛</li>
-<li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
-<li>易與耳：劇辛、龍且、李廣</li>
-<li>刻苦讀書：朱買臣、兒寬、路溫舒、匡衡</li>
-<li>常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆</li>
-<li>漢奸：中行説、趙信、衛律</li>
-<li>媽寶：梁王劉武、昭平君</li>
-<li>射天罵天：武乙、紂、宋康王、上官安</li>
-<li>裸奔愛好者：桑扈、上官安、劉伶</li>
-<li>飆車愛好者：劉賀</li>
-<li>著名司機：羊斟、曹參、衛綰</li>
-<li>變態殺人狂：劉建、劉去</li>
-<li>盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
-<li>裝瘋：箕子、孫臏、蒯徹、韋玄成、朱棣</li>
-<li>獨眼龍：杜欽、夏侯惇</li>
-<li>高頻率犯罪：劉賀、劉立</li>
-<li>背鍋俠：夏侯藩</li>
-<li>殺子：石碏、金日磾、漢成帝、王立、王莽</li>
-<li>狗屎運：王興、王盛</li>
+<li>王莽長子一盆狗血，幾乎協助肅清所有政敵</li>
+<li>出埃及記門上的血保佑猶太人，王莽門上的血殺光所有異己</li>
 </ul>
-<h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
+<h2 class="mume-header" id="32802-%E7%AB%8B%E5%90%8E%E5%8F%8A%E5%8A%A0%E8%B3%9E%E7%8E%8B%E8%8E%BD">32802 立后及加賞王莽</h2>
 
+<blockquote>
+<p>莽召明礼少府宗伯凤入说为人后之谊-&gt;官属按职如故</p>
+</blockquote>
 <ul>
-<li>密康公：三女投奔，執意迎娶，被滅國</li>
-<li>祖己：堅持苦孝被繼母流放致死</li>
-<li>晉景公：掉糞坑而死</li>
-<li>燕王劉定國：庶母弟妻女兒三代亂倫王</li>
-<li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
-<li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
-<li>蒯聵：趕走親兒子，即位為王</li>
-<li>公孫弘：養豬出身</li>
+<li>王莽賄賂王政君，千金散盡還復來</li>
+</ul>
+<h2 class="mume-header" id="32803-%E6%B1%82%E5%A3%AB%E6%B2%BB%E6%B2%B3%E5%8F%8A%E7%BD%AE%E8%A5%BF%E6%B5%B7%E9%83%A1">32803 求士治河及置西海郡</h2>
+
+<blockquote>
+<p>莽奏起明堂、辟雍、灵台-&gt;民始怨矣</p>
+</blockquote>
+<ul>
+<li>九錫之法</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>序號</th>
+<th>名稱</th>
+<th>寓意</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>車馬</td>
+<td>代其步。進退有節，行步有度</td>
+</tr>
+<tr>
+<td>2</td>
+<td>衣服</td>
+<td>表其德。言成文章，行成法則</td>
+</tr>
+<tr>
+<td>3</td>
+<td>樂器</td>
+<td>化其民。長於教訓，內懷至仁</td>
+</tr>
+<tr>
+<td>4</td>
+<td>朱戶</td>
+<td>明其別。居處修理，房內不渫</td>
+</tr>
+<tr>
+<td>5</td>
+<td>納陛</td>
+<td>安其體。動作有禮</td>
+</tr>
+<tr>
+<td>6</td>
+<td>虎賁百人</td>
+<td>備非常。勇猛勁疾，執義堅強</td>
+</tr>
+<tr>
+<td>7</td>
+<td>斧鉞</td>
+<td>得專殺。亢揚威武，志在宿衛</td>
+</tr>
+<tr>
+<td>8</td>
+<td>弓矢</td>
+<td>得專征。內懷仁德，執義不傾</td>
+</tr>
+<tr>
+<td>9</td>
+<td>秬鬯</td>
+<td>事先祖。孝慈父母</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>為滿足王莽強迫症，特置西海郡</li>
+</ul>
+<h2 class="mume-header" id="32804-%E7%8E%8B%E8%8E%BD%E5%8A%A0%E4%B9%9D%E9%8C%AB">32804 王莽加九錫</h2>
+
+<blockquote>
+<p>梁王立坐与卫氏交通-&gt;虎贲三百人</p>
+</blockquote>
+<ul>
+<li>執行九賜始於王莽，成為篡位的內部程序</li>
+</ul>
+<h2 class="mume-header" id="32805-%E6%AD%8C%E5%8A%9F%E9%A0%8C%E5%BE%B7%E5%8F%8A%E4%B8%81%E5%82%85%E7%A7%BB%E5%86%A2">32805 歌功頌德及丁傅移冢</h2>
+
+<blockquote>
+<p>王恽等八人使行风俗还-&gt;以侯就第</p>
+</blockquote>
+<ul>
+<li>傅太后生前執著於尊號，死後被掘墓脫衣服換棺材</li>
+</ul>
+<h2 class="mume-header" id="32806-%E9%B4%86%E6%AE%BA%E6%BC%A2%E5%B9%B3%E5%B8%9D%E5%8F%8A%E5%B1%85%E6%94%9D%E5%81%87%E7%9A%87%E5%B8%9D">32806 鴆殺漢平帝及居攝假皇帝</h2>
+
+<blockquote>
+<p>莽以皇后有子孙瑞-&gt;太后诏曰可</p>
+</blockquote>
+<ul>
+<li>子孫瑞：第一次月經</li>
+</ul>
+<h2 class="mume-header" id="32807-%E5%AD%BA%E5%AD%90%E5%AC%B0%E5%8F%8A%E5%8A%89%E5%B4%87%E5%8F%8D%E8%8E%BD%E5%8F%8A%E9%87%91%E9%8C%AF%E5%88%80">32807 孺子嬰及劉崇反莽及金錯刀</h2>
+
+<blockquote>
+<p>春，正月，王莽祀上帝于南郊-&gt;然卒不与直</p>
+</blockquote>
+<h2 class="mume-header" id="32808-%E7%BF%9F%E7%BE%A9%E8%B6%99%E6%9C%8B%E9%9C%8D%E9%B4%BB%E5%8F%8D%E8%8E%BD">32808 翟義趙朋霍鴻反莽</h2>
+
+<blockquote>
+<p>东郡太守翟义-&gt;遂谋即真之事矣</p>
+</blockquote>
+<ul>
+<li>王政君听闻翟义反莽，暗笑早知道得有这出；王莽戏精，前途未卜，却成天想模仿周公平三监之乱；刘信被反贼立为天子，而后逃走下落不明，自古未有之幸运</li>
+</ul>
+<h2 class="mume-header" id="32809-%E7%8E%8B%E8%8E%BD%E6%BB%85%E8%A6%AA%E5%8F%8A%E7%AC%A6%E5%91%BD%E9%80%A0%E5%8B%A2">32809 王莽滅親及符命造勢</h2>
+
+<blockquote>
+<p>群臣复奏进摄皇帝子安、临爵为公-&gt;发觉，诛死</p>
+</blockquote>
+<ul>
+<li>符命太好造，亭長夢見天公命王莽當皇帝也算，實際料也沒人信，但也不敢說</li>
+</ul>
+<h2 class="mume-header" id="32810-%E7%8E%8B%E6%94%BF%E5%90%9B%E6%91%94%E7%92%BD%E5%8F%8A%E7%8E%8B%E8%8E%BD%E4%BB%A3%E6%BC%A2">32810 王政君摔璽及王莽代漢</h2>
+
+<blockquote>
+<p>梓潼人哀章学问长安-&gt;妇人之仁，悲矣</p>
+</blockquote>
+<ul>
+<li>王莽正在溫水煮青蛙，哀章的政治投機迫使其迅速篡位，並且自己封官，一手掌控歷史節奏，可謂投機王者；而王政君萬事看在眼裡，手握大權卻處處受制，所能做的僅限於摔碎玉璽的一角</li>
 </ul>
 
       </div>
