更新至卷37節7，添加王莽寶貨制

--- a/index.html
+++ b/index.html
@@ -322,6 +322,11 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>2.3.6 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E7%83%8F%E5%AD%AB%E4%B8%96%E7%B3%BB%E5%9C%96.html">烏孫世系圖</a></li>
 <li>2.3.7 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E8%A5%BF%E6%BC%A2/%E6%BC%A2%E5%85%83%E7%8E%8B%E8%8E%BD%E4%B8%96%E7%B3%BB%E5%9C%96.html">漢元王莽世系圖</a></li>
 </ul>
+<h3 class="mume-header" id="24-%E6%96%B0%E6%9C%9D">2.4 新朝</h3>
+
+<ul>
+<li>2.4.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%96%B0%E6%9C%9D/%E7%8E%8B%E8%8E%BD%E5%AF%B6%E8%B2%A8%E5%88%B6.html">王莽寶貨制</a></li>
+</ul>
 <h2 class="mume-header" id="3-%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85">3 通用專項</h2>
 
 <h3 class="mume-header" id="31-%E6%AD%B7%E4%BB%A3%E4%B8%96%E7%B3%BB%E5%9C%96">3.1 歷代世系圖</h3>
