--- a/筆記/资治通鉴37.html
+++ b/筆記/资治通鉴37.html
@@ -436,8 +436,16 @@ pre[data-line] .line-highlight[data-end]:after {
 <p>国师公刘秀言-&gt;封威德子</p>
 </blockquote>
 <ul>
-<li>五均：國家宏觀制定、調控物價；可向國家借貸</li>
-<li>六筦：國家壟斷鹽鐵酒錢；征收山澤稅；開展官倒</li>
+<li>五均價格管制：國家宏觀制定、調控物價；可向國家借貸
+<ul>
+<li>五均：一絲；二綿；三布；四帛；五五穀</li>
+</ul>
+</li>
+<li>六筦經濟管制：國家壟斷鹽鐵酒錢；征收山澤稅；開展官倒
+<ul>
+<li>六筦：一鹽；二酒；三鐵；四名山、大澤；五五均、賒貸；六鐵布、銅冶</li>
+</ul>
+</li>
 </ul>
 <h2 class="mume-header" id="40105-%E5%8C%88%E5%A5%B4%E5%AF%87%E9%82%8A%E5%8F%8A%E5%8A%89%E6%B0%8F%E4%BF%B1%E5%BB%A2">40105 匈奴寇邊及劉氏俱廢</h2>
 
