更新至卷39節2

--- a/年代專項/新朝/新末起義示意圖.html
+++ b/年代專項/新朝/新末起義示意圖.html
@@ -287,14 +287,16 @@ section 綠林軍
         張卬:za,22,366d
     section __平林兵
         陳牧:cm,22,366d
-        廖湛:lz,22,366d     
+        廖湛:lz,22,366d
+        劉玄:lxuan,22,366d     
     section __舂陵兵
         劉縯:ly,22,366d
         劉秀:lx,22,366d
-section 更始帝
+section 玄漢
+    劉玄:active,lxuan2,after lxuan,732d
     王匡:done,wk3,after wk2,366d
     王鳳:done,wf3,after wf2,732d
-    劉縯:active,ly2,after ly,732d
+    劉縯:active,ly2,after ly,1d
     劉秀:active,lx2,after lx,732d
 section 東漢
     劉秀:done,lx3,after lx2,732d
