--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li>2.4.1 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%96%B0%E6%9C%9D/%E7%8E%8B%E8%8E%BD%E5%AF%B6%E8%B2%A8%E5%88%B6.html">王莽寶貨制</a></li>
-<li>2.4.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%96%B0%E6%9C%9D/%E6%96%B0%E6%9C%AB%E8%B5%B7%E7%BE%A9%E7%A4%BA%E6%84%8F%E5%9C%96.html">新末起義示意圖</a></li>
+<li>2.4.2 <a href="%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85/%E6%96%B0%E6%9C%9D/%E6%96%B0%E6%9C%AB%E8%B5%B7%E7%BE%A9%E6%94%BF%E6%AC%8A%E5%9C%96.html">新末起義政權圖</a></li>
 </ul>
 <h3 class="mume-header" id="25-%E6%9D%B1%E6%BC%A2">2.5 東漢</h3>
 
