--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -273,7 +273,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
 <li>餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫</li>
 <li>氣死：申屠嘉、王商</li>
-<li>哭死：張放</li>
+<li>哭死哭瞎：張放、孝睦皇后</li>
 <li>絕食嘔血死：周亞夫、王嘉</li>
 <li>自焚：魏咎、涉間、孝平王皇后</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
