--- a/index.html
+++ b/index.html
@@ -708,6 +708,15 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>王莽滅親表、漢儒天子妻妾制</td>
 <td>王莽7年至14年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B439.html">卷39</a></td>
+<td>漢紀三十一</td>
+<td>23</td>
+<td>24</td>
+<td></td>
+<td>東漢幽州十郡</td>
+<td>王莽15年、玄漢至2年</td>
+</tr>
 </tbody>
 </table>
 
