--- a/筆記/资治通鉴39.html
+++ b/筆記/资治通鉴39.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>奇葩序列</title>
+      <title>资治通鉴39</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,76 +261,166 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97">奇葩序列</h1>
+      <blockquote>
+<p>2021/7/27-&gt;2021/8/1</p>
+</blockquote>
+<h1 class="mume-header" id="403-%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B9%9D-%E6%B1%89%E7%BA%AA%E4%B8%89%E5%8D%81%E4%B8%80">403 卷三十九 汉纪三十一</h1>
 
-<ul>
-<li>拒絕升官發財：季札、子閭、王蠋、孔霸</li>
-<li>後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、司馬炎</li>
-<li>烹子食子：易牙、樂羊</li>
-<li>人力大牛：翟璜、暴勝之</li>
-<li>愛兵如子：吳起、李廣、衛青</li>
-<li>虐待士卒：霍去病、李廣利、張飛</li>
-<li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
-<li>餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫</li>
-<li>氣死：申屠嘉、王商</li>
-<li>哭死哭瞎：張放、孝睦皇后</li>
-<li>絕食嘔血死：周亞夫、王嘉</li>
-<li>自焚：魏咎、涉間、孝平王皇后</li>
-<li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
-<li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母</li>
-<li>絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母</li>
-<li>坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋</li>
-<li>給君主獻孕婦：呂不韋、春申君</li>
-<li>龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝</li>
-<li>口吃：韓非、周昌、司馬相如、鄧艾</li>
-<li>狐臭：楚懷王</li>
-<li>壁中藏書：孔鮒、伏生、陳寵曾祖陳咸</li>
-<li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡</li>
-<li>嘴賤：韓生、栗姬、楊修</li>
-<li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐</li>
-<li>長壽：趙佗、張蒼、伏生</li>
-<li>苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍</li>
-<li>二婚皇后：薄姬、孝景王皇后</li>
-<li>醜：楚穆王、孟嘗君、蔡澤、田蚡</li>
-<li>野獸搏鬥者：轅固、賈夫人、馮婕妤</li>
-<li>被污盜嫂受金：陳平、直不疑</li>
-<li>名廚：伊尹、易牙</li>
-<li>狗監：楊得意</li>
-<li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子</li>
-<li>牧羊：卜式、路溫舒</li>
-<li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛</li>
-<li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
-<li>易與耳：劇辛、龍且、李廣</li>
-<li>刻苦讀書：朱買臣、兒寬、路溫舒、匡衡</li>
-<li>常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆</li>
-<li>漢奸：中行説、趙信、衛律</li>
-<li>媽寶：梁王劉武、昭平君</li>
-<li>射天罵天：武乙、紂、宋康王、上官安</li>
-<li>裸奔愛好者：桑扈、上官安、劉伶</li>
-<li>飆車愛好者：劉賀</li>
-<li>著名司機：羊斟、曹參、衛綰</li>
-<li>變態殺人狂：劉建、劉去</li>
-<li>盜墓達人：劉去、曹操、董卓、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英</li>
-<li>裝瘋：箕子、孫臏、蒯徹、韋玄成、朱棣</li>
-<li>獨眼龍：杜欽、夏侯惇</li>
-<li>高頻率犯罪：劉賀、劉立</li>
-<li>背鍋俠：夏侯藩、魯匡</li>
-<li>殺子：石碏、金日磾、漢成帝、王立、王莽</li>
-<li>狗屎運：王興、王盛</li>
-</ul>
-<h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
+<blockquote>
+<p>23-&gt;24</p>
+</blockquote>
+<h2 class="mume-header" id="40301-%E6%B7%AF%E9%99%BD%E4%B9%8B%E6%88%B0%E5%8F%8A%E7%AB%8B%E6%9B%B4%E5%A7%8B%E5%B8%9D">40301 淯陽之戰及立更始帝</h2>
 
+<blockquote>
+<p>春，正月，甲子朔-&gt;由是豪桀失望，多不服</p>
+</blockquote>
+<h2 class="mume-header" id="40302-%E6%98%86%E9%99%BD%E4%B9%8B%E6%88%B0">40302 昆陽之戰</h2>
+
+<blockquote>
+<p>王莽欲外示自安-&gt;旬月之间，遍于天下</p>
+</blockquote>
 <ul>
-<li>密康公：三女投奔，執意迎娶，被滅國</li>
-<li>祖己：堅持苦孝被繼母流放致死</li>
-<li>晉景公：掉糞坑而死</li>
-<li>燕王劉定國：庶母弟妻女兒三代亂倫王</li>
-<li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
-<li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
-<li>蒯聵：趕走親兒子，即位為王</li>
-<li>公孫弘：養豬出身</li>
+<li>染髮第一人王莽</li>
 </ul>
+<h2 class="mume-header" id="40303-%E9%A6%AE%E7%95%B0%E9%99%8D%E5%8F%8A%E5%8A%89%E7%B8%AF%E5%8A%89%E6%AD%86%E6%AD%BB">40303 馮異降及劉縯劉歆死</h2>
+
+<blockquote>
+<p>莽闻汉兵言莽鸩杀孝平皇帝-&gt;不復就枕矣</p>
+</blockquote>
+<ul>
+<li>王莽苦，每天只喝酒吃鮑魚，讀軍書不睡覺</li>
+</ul>
+<h2 class="mume-header" id="40304-%E9%9A%97%E5%9B%82%E5%85%AC%E5%AD%AB%E8%BF%B0%E8%B5%B7%E5%8F%8A%E5%8A%89%E6%9C%9B%E7%A8%B1%E5%B8%9D">40304 隗囂公孫述起及劉望稱帝</h2>
+
+<blockquote>
+<p>成紀隗崔、隗義-&gt;茂為丞相</p>
+</blockquote>
+<h2 class="mume-header" id="40305-%E5%93%AD%E5%A4%A9%E5%8E%AD%E5%85%B5%E5%8F%8A%E7%8E%8B%E8%8E%BD%E6%AD%BB">40305 哭天厭兵及王莽死</h2>
+
+<blockquote>
+<p>王莽使太師王匡-&gt;皆圣王之驱除云尔</p>
+</blockquote>
+<ul>
+<li>王莽死前行為藝術
+<ul>
+<li>打不過就哭天厭兵，哭者有飯吃，哭得悲哀的封郎官</li>
+<li>拜九虎守長安，每人四千錢，二虎自殺四虎亡</li>
+<li>赦囚徒殺豬飲血盟誓，還沒開戰全跑光</li>
+<li>死前衣華服，手持假古董虞帝匕首，坐在星象斗柄上，聲稱誰敢殺我</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="40306-%E6%9B%B4%E5%A7%8B%E9%83%BD%E6%B4%9B%E9%99%BD">40306 更始都洛陽</h2>
+
+<blockquote>
+<p>定国上公王匡拔洛阳-&gt;都睢陽</p>
+</blockquote>
+<ul>
+<li>更始入洛陽，王匡斬王匡</li>
+</ul>
+<h2 class="mume-header" id="40307-%E5%BE%87%E6%B2%B3%E5%8C%97%E5%8F%8A%E6%94%B6%E9%84%A7%E7%A6%B9%E5%8F%8A%E7%AB%8B%E7%8E%8B%E9%83%8E">40307 徇河北及收鄧禹及立王郎</h2>
+
+<blockquote>
+<p>更始欲令親近大將徇河北-&gt;乃北徇蓟</p>
+</blockquote>
+<h2 class="mume-header" id="40308-%E6%9B%B4%E5%A7%8B%E5%B0%81%E7%8E%8B%E5%8F%8A%E8%B6%99%E8%90%8C%E5%B0%88%E6%AC%8A">40308 更始封王及趙萌專權</h2>
+
+<blockquote>
+<p>申屠建、李松自长安迎更始迁都-&gt;崔、义皆即旧号</p>
+</blockquote>
+<ul>
+<li>更始帝登基羞愧流汗說不出話，面見群臣俯首刮席，行為過於具體，偽造可能性大</li>
+</ul>
+<h2 class="mume-header" id="40309-%E5%BE%81%E7%8E%8B%E9%83%8E%E6%B5%81%E4%BA%A1%E6%9C%9F">40309 征王郎流亡期</h2>
+
+<blockquote>
+<p>耿况遣其子弇奉奏诣长安-&gt;燒盧舍以絕其反顧之望</p>
+</blockquote>
+<ul>
+<li>陰陵田父故意給項羽指錯道，項羽敗；白衣老父特地給劉秀指明路，劉秀勝</li>
+</ul>
+<h2 class="mume-header" id="40310-%E6%94%BB%E6%9F%8F%E4%BA%BA%E9%89%85%E9%B9%BF%E4%B8%8D%E5%88%A9%E5%8F%8A%E6%94%B6%E7%9C%BE%E5%B0%87">40310 攻柏人鉅鹿不利及收眾將</h2>
+
+<blockquote>
+<p>秀進拔盧奴-&gt;樂可言邪</p>
+</blockquote>
+<h2 class="mume-header" id="40311-%E6%96%AC%E7%8E%8B%E9%83%8E%E5%8F%8A%E5%8A%89%E7%A7%80%E7%8D%A8%E7%AB%8B">40311 斬王郎及劉秀獨立</h2>
+
+<blockquote>
+<p>耿純言於秀曰-&gt;始貳於更始</p>
+</blockquote>
+<ul>
+<li>曹操赤壁後焚謗書，同光武破王郎後焚書</li>
+</ul>
+<h2 class="mume-header" id="40312-%E7%BE%A4%E9%9B%84%E4%B8%A6%E8%B5%B7">40312 群雄並起</h2>
+
+<blockquote>
+<p>是時，諸賊銅馬-&gt;众数万人</p>
+</blockquote>
+<ul>
+<li>東漢幽州十郡</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>郡名</th>
+<th>郡治現位置</th>
+<th>沿革別名</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>涿郡</td>
+<td>河北涿州</td>
+<td>三國范陽</td>
+</tr>
+<tr>
+<td>廣陽</td>
+<td>北京大興</td>
+<td>戰國燕薊縣</td>
+</tr>
+<tr>
+<td>代郡</td>
+<td>河北蔚縣</td>
+<td></td>
+</tr>
+<tr>
+<td>上谷</td>
+<td>河北張家口懷來</td>
+<td></td>
+</tr>
+<tr>
+<td>漁陽</td>
+<td>北京密雲</td>
+<td></td>
+</tr>
+<tr>
+<td>右北平</td>
+<td>內蒙古寧城</td>
+<td></td>
+</tr>
+<tr>
+<td>遼西</td>
+<td>遼寧義縣</td>
+<td></td>
+</tr>
+<tr>
+<td>遼東</td>
+<td>遼寧遼陽</td>
+<td></td>
+</tr>
+<tr>
+<td>玄菟</td>
+<td>吉林集安，數遷</td>
+<td></td>
+</tr>
+<tr>
+<td>樂浪</td>
+<td>朝鮮平壤</td>
+<td></td>
+</tr>
+</tbody>
+</table>
 
       </div>
       
